--- a/css/register.css
+++ b/css/register.css
@@ -38,21 +38,22 @@ body{
 .between button{
 	width: 100%;
 	height: 40px;
-	background: 4384c5;
 	font-size: 18px;
 	color: #fff;
 	margin-top: 45px;
+	border: 0;
 }
 .tuigu_shuru {
 	width: 100%;
 	height: auto;
 	overflow: hidden;
+	margin-top: 45px;
 }
 .tuigu_shuru input {
 	display: block;
 	width: 100%;
 	font-size: 20px;
-	letter-spacing: 48px;
+	letter-spacing: 51px;
 	border: 0;
 	padding: 0 4%;
 }
@@ -62,8 +63,19 @@ body{
 	height: 1px;
 	border: 1px #b2b2b2 solid;
 	float: left;
-	margin-right: 4.8%;
+	margin-right: 5.6%;
 }
 .tuigu_shuru span:last-child{
 	margin-right: 0;
+}
+.send_code{
+	text-align: right;
+	color: #4384c5;
+	margin-top: 15px;
+}
+.can{
+	background: #4384c5;
+}
+.cannot{
+	background: #bfd7ee;
 }
