--- a/css/home.css
+++ b/css/home.css
@@ -1,17 +1,272 @@
-.mui-bar-tab .mui-tab-item{
-	height:52px;
+.mui-bar-tab .mui-tab-item {
+	height: 52px;
 }
-.mui-bar-tab .mui-tab-item.mui-active{
-	color:#4384c5;
+
+.mui-bar-tab .mui-tab-item.mui-active {
+	color: #4384c5;
 }
-.mui-bar{
+
+.mui-bar {
 	box-shadow: none;
-	border-top:1px solid #e5e5e5;
+	border-top: 1px solid #e5e5e5;
+	background-color: #fff;
+	border-bottom:1px solid #e5e5e5;
 }
-.img_box>img{
-	height:20px;
-	margin-bottom:2px;
+.mui-title{
+	color:#333;
+	font-weight: bold;
 }
-.mui-slider .mui-slider-group .mui-slider-item{
-	height:225px;
+.img_box>img {
+	height: 20px;
+	margin-bottom: 2px;
+}
+
+.mui-slider .mui-slider-group .mui-slider-item {
+	height: 225px;
+}
+
+.title {
+	height: 40px;
+	line-height: 40px;
+	color: #333;
+	font-size: 14px;
+	padding-left: 15px;
+	font-weight: bold;
+	letter-spacing: 1px;
+}
+
+.mui-table-view .mui-media-object {
+	height: 37px;
+	line-height: 37px;
+}
+
+.list_title>span:nth-child(1) {
+	color: #333;
+	font-size: 17px;
+	font-weight: bold;
+}
+
+.list_title>span:nth-child(2) {
+	font-size: 12px;
+	color: #999;
+	padding-left: 10px;
+}
+
+.mui-ellipsis {
+	color: #333;
+	font-size: 13px;
+	padding-top: 10px;
+}
+
+.mui-slider-indicator {
+	bottom: 20px;
+}
+
+.mui-preview-image.mui-fullscreen {
+	position: fixed;
+	z-index: 20;
+	background-color: #000;
+}
+
+.mui-preview-header,
+.mui-preview-footer {
+	position: absolute;
+	width: 100%;
+	left: 0;
+	z-index: 10;
+}
+
+.mui-preview-header {
+	height: 44px;
+	top: 0;
+}
+
+.mui-preview-footer {
+	height: 50px;
+	bottom: 0px;
+}
+
+.mui-preview-header .mui-preview-indicator {
+	display: block;
+	line-height: 25px;
+	color: #fff;
+	text-align: center;
+	margin: 15px auto 4;
+	width: 70px;
+	background-color: rgba(0, 0, 0, 0.4);
+	border-radius: 12px;
+	font-size: 16px;
+}
+
+.mui-preview-image {
+	display: none;
+	-webkit-animation-duration: 0.5s;
+	animation-duration: 0.5s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+.mui-preview-image.mui-preview-in {
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+}
+
+.mui-preview-image.mui-preview-out {
+	background: none;
+	-webkit-animation-name: fadeOut;
+	animation-name: fadeOut;
+}
+
+.mui-preview-image.mui-preview-out .mui-preview-header,
+.mui-preview-image.mui-preview-out .mui-preview-footer {
+	display: none;
+}
+
+.mui-zoom-scroller {
+	position: absolute;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	-webkit-backface-visibility: hidden;
+}
+
+.mui-zoom {
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+}
+
+.mui-slider .mui-slider-group .mui-slider-item img {
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.mui-android-4-1 .mui-slider .mui-slider-group .mui-slider-item img {
+	width: 100%;
+}
+
+.mui-android-4-1 .mui-slider.mui-preview-image .mui-slider-group .mui-slider-item {
+	display: inline-table;
+}
+
+.mui-android-4-1 .mui-slider.mui-preview-image .mui-zoom-scroller img {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.mui-preview-loading {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+.mui-preview-loading.mui-active {
+	display: block;
+}
+
+.mui-preview-loading .mui-spinner-white {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -25px;
+	margin-top: -25px;
+	height: 50px;
+	width: 50px;
+}
+
+.mui-preview-image img.mui-transitioning {
+	-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
+	transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+@-webkit-keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@-webkit-keyframes fadeOut {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@keyframes fadeOut {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+p img {
+	max-width: 100%;
+	height: auto;
+	margin:15px 0;
+}
+.notice_top{
+	background: #fff;
+	border-bottom:1px solid #e5e5e5;
+	padding:0 15px;
+}
+.notice_top>p:nth-child(1){
+	color:#333;
+	font-size: 17px;
+	font-weight: bold;
+	padding:20px 0;
+}
+.notice_top>p:nth-child(2){
+	color:#999;
+	font-size: 13px;
+	padding-bottom:15px;p img
+}
+.notice_top>p:nth-child(2)>span:nth-child(1){
+	padding-right:20px;
+}
+.mui-content-padded{
+	margin:0;
+	padding:20px 15px;
+	background: #fff;
+	font-size:15px;
+}
+.mui-content-padded>p{
+	color:#474747;
+	line-height: 25px;
+	font-size: 15px;
+}
+.mui-bar-nav.mui-bar .mui-icon{
+	background: rgba(236,165,208,0.8);
 }
