--- a/css/register.css
+++ b/css/register.css
@@ -26,7 +26,7 @@ body{
 .input_box{
 	margin-top: 35px;
 }
-.between input{
+.input_box input{
 	height: 40px;
 	line-height: 40px;
 	border: 0;
@@ -49,23 +49,33 @@ body{
 	overflow: hidden;
 	margin-top: 20px;
 }
+/*.tuigu_shuru input{
+	width: 12%;
+	border-radius: 0;
+	border: 0;
+	border-bottom: 1px #b2b2b2 solid;
+	margin-right: 4.2%;
+	text-align: center;
+}
+.tuigu_shuru input:last-child{
+	margin-right: 0;
+}*/
 .tuigu_shuru input {
 	display: block;
 	width: 100%;
 	font-size: 20px;
-	letter-spacing: 2.55em;
+	letter-spacing: 3.2rem;
 	border: 0;
 	padding: 0 4%;
 }
-.tuigu_shuru span {
+.tuigu_shuru p {
 	width: 12%;
-	display: block;
 	height: 1px;
-	border: 1px #b2b2b2 solid;
+	border-bottom: 1px #b2b2b2 solid;
 	float: left;
 	margin-right: 5.6%;
 }
-.tuigu_shuru span:last-child{
+.tuigu_shuru p:last-child{
 	margin-right: 0;
 }
 .send_code{
