--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,18 @@ del,ins,u,s,a,a:hover{text-decoration:none;}
 body,textarea,input,button,select,keygen,legend{font:12px/1.14 arial,\5b8b\4f53;color:#333;outline:0;}
 body{background:#fff;}
 a,a:hover{color:#333;}
+body{
+	background: #fff;
+}
+.header a{
+	color: #333;
+}
+.mui-title{
+	color: #333;
+}
+.mui-bar-nav{
+	box-shadow: 0 0 0 #000;
+	border-bottom: 1px solid #ECECEC;
+	color: #333;
+	background: #fff;
+}
