--- a/css/alterPassword.css
+++ b/css/alterPassword.css
@@ -22,11 +22,7 @@ body{
 	color: #333;
 	font-weight: 500;
 	margin-top: 45px;
-}
-.limit{
-	font-size: 14px;
-	color: #999;
-	padding: 10px 0;
+	margin-bottom: 37px;
 }
 .between .info input{
 	height: 40px;
@@ -36,23 +32,7 @@ body{
 	font-size: 16px;
 	color: #999;
 	border-radius: 0;
-}
-.mui-checkbox input[type=checkbox], .mui-radio input[type=radio]{
-	left: 20px;
-}
-.mui-checkbox label, .mui-radio label{
-	padding-left: 50px;
-	color: #999;
-	font-size: 14px;
-}
-.agreement label a{
- 	color: #4384c5;
-}
-.mui-checkbox input[type=checkbox]:checked:before{
-	font-size: 26px;
-}
-.mui-checkbox input[type=checkbox]:before{
-	font-size: 26px;
+	padding: 10px;
 }
 .between button{
 	width: 100%;
@@ -68,3 +48,12 @@ body{
 .cannot{
 	background: #bfd7ee;
 }
+/*email_code_box*/
+.email_code_box{
+	width: 100%;
+	height: 200px;
+	background: #fff;
+	position: fixed;
+	bottom: 0;
+}
+
