--- a/css/about.css
+++ b/css/about.css
@@ -4,3 +4,10 @@
 .logo img{
 	width: 100%;
 }
+.introduce{
+	padding: 0 15px;
+	font-size: 16px;
+	color: #333;
+	text-indent: 2em;
+	line-height: 24px;
+}
