--- a/css/alterPassword.css
+++ b/css/alterPassword.css
@@ -51,9 +51,67 @@ body{
 /*email_code_box*/
 .email_code_box{
 	width: 100%;
-	height: 200px;
 	background: #fff;
+	padding-bottom: 15px;
 	position: fixed;
 	bottom: 0;
 }
-
+.popover_header{
+	width: 100%;
+	height: 50px;
+	padding: 0 15px;
+	border-bottom: 1px solid #bcbcbc;
+}
+.popover_header p{
+	float: left;
+	font-size: 16px;
+	color: #333;
+	line-height: 50px;
+}
+.popover_header span{
+	display: block;
+	float: right;
+	font-size: 14px;
+	color: #666;
+	line-height: 50px;
+}
+.popover_content{
+	padding: 0 30px;
+}
+.popover_content p{
+	padding: 10px;
+	font-size: 20px;
+	color: #333;
+}
+.popover_email{
+	position: relative;
+}
+.popover_email input{
+	height: 40px;
+	line-height: 40px;
+	border: 0;
+	border-bottom: 1px solid #bcbcbc;
+	font-size: 16px;
+	color: #999;
+	border-radius: 0;
+}
+.popover_email a{
+	position: absolute;
+	right: 10px;
+	line-height: 40px;
+	font-size: 16px;
+}
+.popover_content button{
+	width: 100%;
+	height: 40px;
+	font-size: 18px;
+	color: #fff;
+	margin-top: 10px;
+	border: 0;
+}
+.can{
+	background: #4384c5;
+}
+.cannot{
+	background: #bfd7ee;
+}
