--- a/css/invite.css
+++ b/css/invite.css
@@ -14,6 +14,7 @@ body{
 	box-shadow: 0 0 0 #000;
 	color: #fff;
 	background: rgba(0,0,0,0);
+	border-bottom: 0;
 }
 .mui-content{
 	background: rgba(0,0,0,0);
