--- a/css/mine.css
+++ b/css/mine.css
@@ -18,7 +18,7 @@ body{
 	color: #333;
 	font-size: 16px;
 	text-align: center;
-	padding: 9px 0;
+	padding: 9px 0 20px 0;
 }
 .content{
 	background: #fff;
