--- a/css/barcode.css
+++ b/css/barcode.css
@@ -1,6 +1,3 @@
-.header{
-	z-index: 9999;
-}
 .header a{
 	color: #fff;
 }
@@ -19,9 +16,10 @@
 #bcid {
 	width: 100%;
 	position: absolute;
-	top: 0px;
+	top: 0;
 	bottom: 44px;
 	text-align: center;
+	z-index: 9;
 }
 
 .tip {
