--- a/css/account.css
+++ b/css/account.css
@@ -120,7 +120,7 @@ span.mui-icon {
 
 .mui-popover {
 	width: 85%;
-	min-height: 380px;
+	/*min-height: 380px;*/
 	background: #F0F0F0;
 }
 
@@ -151,8 +151,106 @@ span.mui-icon {
 	padding: 15px 0;
 	margin-top: 20px;
 }
-.modal_footer>span{
-	border:1px solid #DEDEDE;
-	padding:7px 50px;
+
+.modal_footer>span {
+	border: 1px solid #DEDEDE;
+	padding: 7px 50px;
 	border-radius: 3px;
+}
+
+
+/*email_code_box*/
+
+.email_code_box {
+	width: 100%;
+	background: #fff;
+	padding-bottom: 15px;
+	position: fixed;
+	bottom: 0;
+}
+
+.popover_header {
+	width: 100%;
+	height: 50px;
+	padding: 0 15px;
+	border-bottom: 1px solid #bcbcbc;
+}
+
+.popover_header p {
+	float: left;
+	font-size: 14px;
+	color: #333;
+	line-height: 50px;
+}
+
+.popover_header span {
+	display: block;
+	float: right;
+	font-size: 12px;
+	color: #666;
+	line-height: 50px;
+}
+
+.popover_content {
+	/*padding: 0 30px;*/
+}
+
+.popover_content p {
+	padding: 18px 15px 20px 15px;
+	font-size: 18px;
+	color: #333;
+}
+
+.popover_email {
+	position: relative;
+}
+
+.popover_email input {
+	height: 40px;
+	line-height: 40px;
+	border: 0;
+	border-bottom: 1px solid #bcbcbc;
+	font-size: 16px;
+	color: #999;
+	border-radius: 0;
+}
+
+.popover_email a {
+	position: absolute;
+	right: 10px;
+	line-height: 40px;
+	font-size: 16px;
+}
+
+.popover_content button {
+	width: 100%;
+	height: 40px;
+	font-size: 18px;
+	color: #fff;
+	margin-top: 10px;
+	border: 0;
+}
+
+.can {
+	background: #4384c5;
+}
+
+.cannot {
+	background: #bfd7ee;
+}
+input[type=password],input[type=text]{
+	border:none;
+	margin-bottom:0;
+	font-size: 14px;
+}
+
+.mui-input-row{
+	border-bottom: 1px solid rgba(0,0,0,.2);
+	margin:0 25px;
+}
+.sure_box{
+	padding:0 25px;
+	text-align: center;
+	margin-top:5px;
+	margin-bottom:5px;
 }
