--- a/css/barcode.css
+++ b/css/barcode.css
@@ -1,3 +1,18 @@
+/*body{
+	background: rgba(0,0,0,0);
+}
+.warp{
+	position: relative;
+	width: 100%;
+	height: auto;
+}
+.substance{
+	position: absolute;
+	background: rgba(0,0,0,0);
+	z-index: 99999;
+	width: 100%;
+	top: 0;
+}
 .header a{
 	color: #fff;
 }
@@ -8,44 +23,33 @@
 	box-shadow: 0 0 0 #000;
 	border-bottom: 0;
 	color: #fff;
-	background: #fff;
+	background: rgba(0,0,0,0);
 }
 .mui-content{
-	background: #fff;;
+	background: rgba(0,0,0,0);
+}
+#bcid{
+	width: 100%;
+	min-height: 100vh;
+	z-index: 9;
+	position: absolute;
+	top: 0;
+}*/
+.complete_btn {
+	position: absolute;
+	top: 13px;
+	right: 15px;
+	font-size: 15px;
 }
 #bcid {
 	width: 100%;
 	position: absolute;
-	top: 0;
-	bottom: 44px;
+	top: 44px;
+	bottom: 0;
 	text-align: center;
-	z-index: 9;
 }
-
 .tip {
 	color: #FFFFFF;
 	font-weight: bold;
 	text-shadow: 0px -1px #103E5C;
-}
-
-footer {
-	width: 100%;
-	height: 44px;
-	position: absolute;
-	bottom: 0px;
-	line-height: 44px;
-	text-align: center;
-	color: #FFF;
-}
-
-.fbt {
-	width: 50%;
-	height: 100%;
-	background-color: #FFCC33;
-	float: left;
-}
-
-.fbt:active {
-	-webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.5);
-	box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.5);
 }
