--- a/css/echarts.css
+++ b/css/echarts.css
@@ -71,7 +71,7 @@
 	border-bottom: 5px solid #e5e5e5;
 }
 .summary{
-	padding: 0 15px;
+	padding: 0 15px 60px 15px;
 }
 .summary h5{
 	font-size: 14px;
