--- a/css/echarts.css
+++ b/css/echarts.css
@@ -84,16 +84,17 @@
 	line-height: 24px;
 }
 .footer{
-	width: 80%;
-	margin: 0 auto;
+	width: 100%;
 	padding: 10px 15px;
 	background: #fff;
 	position: fixed;
 	bottom: 0;
-	left: 50%;
-	margin-left: -40%;
 }
-.footer button{
+.footer_main{
+	width: 80%;
+	margin: 0 10%;
+}
+.footer_main button{
 	width: 48%;
 	height: 40px;
 	border: 0;
@@ -101,11 +102,11 @@
 	border-radius: 6px;
 	font-size: 20px;
 }
-.footer button:first-child{
+.footer_main button:first-child{
 	float: left;
 	background: #08bfb6;
 }
-.footer button:last-child{
+.footer_main button:last-child{
 	float: right;
 	background: #e66d42;
 }
