--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,9 @@ body{
     -webkit-transform: scale(1) translate(-50%, -50%);
     transform: scale(1) translate(-50%, -50%);
 }
+.mui-show-loading.loading-visible p{
+	text-indent: 0;
+}
 .mui-show-loading .mui-spinner{
     margin-top: 24px;
     width: 36px;
