--- a/css/setPassword.css
+++ b/css/setPassword.css
@@ -16,6 +16,7 @@ body{
 .between{
 	padding: 0 30px;
 	background: #fff;
+	margin-top: 40px;
 }
 .between h4{
 	font-size: 26px;
@@ -38,10 +39,10 @@ body{
 	border-radius: 0;
 }
 .mui-checkbox input[type=checkbox], .mui-radio input[type=radio]{
-	left: 20px;
+	left: 10px;
 }
 .mui-checkbox label, .mui-radio label{
-	padding-left: 50px;
+	padding-left: 40px;
 	color: #999;
 	font-size: 14px;
 }
