--- a/css/mine.css
+++ b/css/mine.css
@@ -14,6 +14,13 @@ body{
 .portrait img{
 	width: 100%;
 }
+.portrait .already{
+	width: 75px;
+	height: 75px;
+	margin: 0 auto;
+	background: #ccc;
+	border-radius: 50%;
+}
 .header p{
 	color: #333;
 	font-size: 16px;
