--- a/css/userInfo.css
+++ b/css/userInfo.css
@@ -30,6 +30,10 @@
 	float: right;
 	margin-top: 10px;
 }
+.between .portrait img{
+	width: 100%;
+	border-radius: 50%;
+}
 .between ul li span{
 	float: right;
 	margin-left: 4px;
