--- a/css/trade.css
+++ b/css/trade.css
@@ -391,7 +391,7 @@ input[type=range] {
 	-webkit-appearance: none;
 	border-radius: 10px;
 	width: 100%;
-	background: -webkit-linear-gradient(#059CFA, #059CFA) no-repeat;
+	/*background: -webkit-linear-gradient(#059CFA, #059CFA) no-repeat;*/
 	background-size: 0% 100%;
 }
 
@@ -428,26 +428,37 @@ input[type=range]::-webkit-slider-thumb {
 	border: 4px solid #08BF86;
 }
 
-.green_bg{
-	height:13px;
-	width:100%;
+.green_bg {
+	height: 13px;
+	width: 100%;
 	border-radius: 10px;
 	position: absolute;
-	top:1px;
-	left:0;
+	top: 1px;
+	left: 0;
 	z-index: 5;
 }
-.sliding_box{
+
+.sliding_box {
 	position: relative;
-	height:30px;
+	height: 30px;
 }
 
-.sliding_box>input{
+.green_slide {
 	-webkit-appearance: none;
 	background: #08BF86;
 	z-index: 6;
 	position: absolute;
-	top:0;
-	right:0;
-	width:100%;
+	top: 0;
+	right: 0;
+	width: 100%;
+}
+
+.orange_slide {
+	-webkit-appearance: none;
+	background: #E66D42;
+	z-index: 6;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
 }
