--- a/css/setPassword.css
+++ b/css/setPassword.css
@@ -22,7 +22,7 @@ body{
 	font-size: 26px;
 	color: #333;
 	font-weight: 500;
-	margin-top: 45px;
+	margin-bottom:20px;
 }
 .limit{
 	font-size: 14px;
