--- a/css/alterPassword.css
+++ b/css/alterPassword.css
@@ -95,7 +95,7 @@ body{
 	color: #999;
 	border-radius: 0;
 }
-.popover_email a{
+.popover_email span{
 	position: absolute;
 	right: 10px;
 	line-height: 40px;
