--- a/css/alterPassword.css
+++ b/css/alterPassword.css
@@ -97,9 +97,11 @@ body{
 }
 .popover_email a{
 	position: absolute;
+	top: 0;
 	right: 10px;
 	line-height: 40px;
 	font-size: 16px;
+	z-index: 9;
 }
 .popover_content button{
 	width: 100%;
