--- a/css/oreManage.css
+++ b/css/oreManage.css
@@ -1,101 +1,151 @@
 body, .mui-content{
 	background: #f7f7f7;
 }
-.complete_btn {
-	position: absolute;
-	top: 13px;
-	right: 15px;
-	font-size: 20px;
-}
 .saoma_btn{
-	position: absolute;
-	top: 13px;
-	right: 60px;
+ 	margin-top: 12px;
 	font-size: 20px;
 }
-.between{
+.miner_list{
+	width: 100%;
+	height: auto;
+}
+.miner_box{
+	overflow: hidden;
+	position: relative;
 	padding: 0 15px;
 }
 .miner{
 	width: 100%;
-	height: auto;
-	border-radius: 6px;
-	margin: 10px 0;
-}
-.online{
 	background: #fff;
+	border-radius: 8px;
+	margin: 10px 0;
+	transition: .3s;
 }
-.offline{
-	background: #e5e5e5;
-}
-.title{
-	padding: 10px 15px;
+.miner .title{
+	width: 100%;
 	overflow: hidden;
+	border-bottom: 1px solid #EFEFEF;
+	padding: 8px 15px;
 }
-.title .name{
-	color: #222;
-	font-size: 17px;
+.miner .title .name{
 	float: left;
+	font-size: 15px;
+	color: #333;
+	font-weight: 500;
 }
-.title .state{
+.miner .title .status{
+	font-size: 15px;
 	float: right;
-	font-size: 17px;
-	color: #4384c5;
 }
-.state_box{
-	text-align: center;
-	float: left;
-	width:20%;
-	padding-top:16px;
+.stay{
+	color: #fe8d4f;
 }
-.detail{
+.stop{
+	color: #3cc0fe;
+}
+.miner_content{
+	padding-bottom: 8px;
+	border-bottom: 1px solid #EFEFEF;
+}
+.miner_income{
+	padding: 8px 15px;
+	width: 100%;
 	overflow: hidden;
-	margin-bottom: 10px;
-	padding-bottom:10px;
 }
-.state_box img{
-	width: 30px;
-}
-.miner_word{
+.miner_income li{
+	width: 50%;
 	float: left;
-	width:80%;
 }
-.miner_word p{
-	line-height: 26px;
+.miner_income li h6{
+	font-size: 12px;
+	color: #104981;
+	font-weight: 500;
+	padding: 4px 0;
+}
+.miner_income li p{
 	font-size: 15px;
-	color: #666;
+	color: #388ee4;
+	padding: 4px 0;
 }
-.miner_word p span{
-	color: #333;
-	font-size: 19px;
-	margin-right: 5px;
+.miner_income li p span{
+	margin-left: 5px;
+	font-size: 12px;
 }
-
-.miner_chunk{
-	display: none;
+.miner_address{
+	margin: 0 15px;
+	padding: 0 10px;
+	background: #e7eef6;
+	color: #104981;
+	font-size: 12px;
+	line-height: 20px;
+	border-radius: 10px;
 }
-.miner_chunk ul{
+.miner_address span{
+	margin-left: 5px;
+}
+.miner_footer{
+	width: 100%;
+	padding: 8px 0;
 	overflow: hidden;
-	margin-top: 10px;
 }
-.miner_chunk ul li{
+.miner_footer p{
 	float: left;
-	width: 18%;
-	padding: 10px 0;
-	margin-right: 2.5%;
-	margin-bottom: 10px;
-}
-.miner_chunk ul li:nth-child(5n){
-	margin-right: 0;
-}
-.miner_chunk ul li p{
-	text-align: center;
+	width: 50%;
 	line-height: 28px;
+	text-align: center;
 	font-size: 15px;
 }
-.miner_chunk ul li p:first-child{
-	color: #333;
+.miner_footer p:first-child{
+	border-right: 1px solid #EFEFEF;
 }
-.miner_chunk ul li p:last-child{
-	color: #4384c5;
+.shut_down{
+	color: #e14b2d;
+	padding-left: 5%;
+	position: relative;
+}
+.shut_down i{
+	font-size: 20px;
+	position: absolute;
+	left: 30%;
+}
+.start_open{
+	color: #4384C5;
+	padding-left: 5%;
+	position: relative;
+}
+.start_open i{
+	font-size: 20px;
+	position: absolute;
+	left: 30%;
+}
+.purse{
+	color: #4384C5;
+	padding-left: 5%;
+	position: relative;
+}
+.purse i{
+	font-size: 20px;
+	position: absolute;
+	left: 15%;
+}
+.delete_miner{
+	width: 85px;
+	height: 168px;
+	background: #fff;
+	position: absolute;
+	top: 8px;
+	right: -85px;
+	border-bottom-left-radius: 8px;
+	border-top-left-radius: 8px;
+	transition: .3s;
+}
+.delete_miner i{
+	font-size: 25px;
+	display: block;
+	margin: 60px 30px 15px 30px;
+}
+.delete_miner p{
+	text-align: center;
+	color: #6e7ebf;
+	font-size: 13px;
 }
