--- a/css/oreManage.css
+++ b/css/oreManage.css
@@ -25,20 +25,32 @@ body, .mui-content{
 	width: 100%;
 	overflow: hidden;
 	border-bottom: 1px solid #EFEFEF;
-	padding: 8px 15px;
+	padding: 0 15px;
+	height:35px;
+	line-height: 35px;
 }
 .miner .title .name{
 	float: left;
 	font-size: 15px;
 	color: #333;
 	font-weight: 500;
+	line-height: 35px;
 }
-.miner .title .status{
+/*.miner .title{
 	font-size: 15px;
 	float: right;
+}*/
+.status{
+	font-size: 13px;
+	float: right;
+	color:#999;
+	position: relative;
 }
-.stay{
-	color: #fe8d4f;
+.status>img{
+	position: absolute;
+	top:1px;
+	left:-35px;
+	height:30px;
 }
 .stop{
 	color: #3cc0fe;
