--- a/css/oreManage.css
+++ b/css/oreManage.css
@@ -100,6 +100,18 @@ body, .mui-content{
 	padding: 8px 0;
 	overflow: hidden;
 }
+.miner_footer_two{
+	width: 100%;
+	padding: 8px 0;
+	overflow: hidden;
+}
+.miner_footer_two>p{
+	/*float: left;
+	width: 100%;*/
+	line-height: 28px;
+	text-align: center;
+	font-size: 15px;
+}
 .miner_footer p{
 	float: left;
 	width: 50%;
@@ -128,7 +140,7 @@ body, .mui-content{
 .start_open i{
 	font-size: 20px;
 	position: absolute;
-	left: 30%;
+	left: 35%;
 }
 .purse{
 	color: #4384C5;
@@ -184,7 +196,7 @@ body, .mui-content{
 	text-align: center;
 	width: 87%;
 	padding-bottom: 10px;
-	position: absolute;
+	position: fixed;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%)
