--- a/css/addOre.css
+++ b/css/addOre.css
@@ -20,7 +20,16 @@
 	height: 40px;
 	font-size: 18px;
 	color: #fff;
-	margin-top: 85px;
 	border: 0;
 	background: #4384c5;
+}
+#miner_name{
+	padding: 30px 0 10px;
+	font-size: 16px;
+	color: #333;
+}
+.saoma_btn{
+ 	margin-top: 14px;
+	font-size: 16px;
+	font-weight: 500;
 }
