--- a/css/export.css
+++ b/css/export.css
@@ -75,7 +75,7 @@
 	background: #e5e5e5;
 	font-size: 18px;
 	color: #333;
-	padding: 15px 0 15px 30px;
+	padding: 15px 10px 15px 30px;
 	margin-top: 40px;
 	margin-bottom: 60px;
 	line-height: 30px;
