--- a/css/oreManage.css
+++ b/css/oreManage.css
@@ -69,19 +69,27 @@ body, .mui-content{
 	float: left;
 }
 .miner_income li h6{
+	text-align: center;
 	font-size: 12px;
 	color: #104981;
 	font-weight: 500;
 	padding: 4px 0;
 }
 .miner_income li p{
-	font-size: 15px;
+	text-align: center;
+	font-size: 20px;
 	color: #388ee4;
 	padding: 4px 0;
 }
 .miner_income li p span{
 	margin-left: 5px;
 	font-size: 12px;
+}
+.miner_address_title{
+	margin: 0 15px 10px;
+	padding: 0 10px;
+	font-size: 14px;
+	color: #666;
 }
 .miner_address{
 	margin: 0 15px;
@@ -91,6 +99,7 @@ body, .mui-content{
 	font-size: 12px;
 	line-height: 20px;
 	border-radius: 10px;
+	word-break: break-all;
 }
 .miner_address span{
 	margin-left: 5px;
@@ -173,10 +182,13 @@ body, .mui-content{
 	transition: .3s;
 }
 .high_height{
-	height: 180px;
+	height: 206px;
+}
+.low_height i{
+	margin: 20px 30px 10px !important;
 }
 .low_height{
-	height:120px;
+	height: 100px;
 }
 .delete_miner i{
 	font-size: 25px;
