--- a/css/setPassword.css
+++ b/css/setPassword.css
@@ -46,8 +46,15 @@ body{
 	color: #999;
 	font-size: 14px;
 }
-.agreement label a{
+.agreement{
+	/*padding-top:20px;*/
+	position: relative;
+}
+.agreement a{
  	color: #4384c5;
+ 	position: absolute;
+ 	top:11px;
+ 	left:87px;
 }
 .mui-checkbox input[type=checkbox]:checked:before{
 	font-size: 26px;
@@ -68,4 +75,43 @@ body{
 }
 .cannot{
 	background: #bfd7ee;
+}
+.alert_box {
+	text-align: center;
+	width: 87%;
+	padding:0 20px 20px;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%)
+}
+
+.alert_title {
+	color: #333;
+	font-size: 24px;
+	font-weight: bold;
+	padding-top: 30px;
+	padding-bottom: 23px;
+}
+
+.alert_body {
+	color: #333;
+	font-size: 15px;
+	margin: 5px 0;
+	max-height: 280px;
+	/*overflow-x:hidden;*/
+	overflow-y:scroll;
+	text-align: left;
+	/*overflow:auto*/
+	/*word-break:break-all;*/
+}
+.close_btn{
+	border-radius: 5px;
+	color: #fff;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	font-size: 18px;
+	background: #e66d42;
+	margin-top:27px;
 }
