--- a/css/import.css
+++ b/css/import.css
@@ -33,7 +33,7 @@
 
 .import_alert {
 	padding-top: 15px;
-	padding-bottom: 50px;
+	padding-bottom: 40px;
 	color: #333;
 	font-size: 13px;
 	line-height: 18px;
@@ -76,7 +76,7 @@
 	border-radius: 5px;
 	text-align: center;
 	font-size: 18px;
-	margin-top:60px;
+	margin-top:60px !important;
 }
 .saoma_btn{
 	position: absolute;
@@ -84,4 +84,19 @@
 	right: 20px;
 	font-size: 20px !important;
 }
-
+.info input{
+	height: 40px;
+	line-height: 40px;
+	border: 0;
+	border-bottom: 1px solid #bcbcbc;
+	font-size: 14px;
+	color: #999;
+	border-radius: 0;
+}
+.create_alert{
+	font-size: 13px;
+	color:#333;
+	line-height: 25px;
+	font-weight: bold;
+	padding-bottom: 20px;
+}
