--- a/css/transfer.css
+++ b/css/transfer.css
@@ -25,6 +25,14 @@
 	top: 8px;
 	font-size: 24px;
 }
+.detail span{
+	line-height: 38px;
+	position: absolute;
+	right: 10px;
+	top: 0;
+}
+.detail input{
+}
 .detail_info{
 	border: 1px solid #f6f6f6;
 	padding: 10px 15px;
