--- a/css/version.css
+++ b/css/version.css
@@ -12,6 +12,42 @@
 	text-align: center;
 	color: #323232;
 }
+.between{
+	margin: 0 20px;
+	min-height: 100vh;
+	position: relative;
+}
 .introduce{
 	color: #323232;
+	text-indent: 2em;
+	line-height: 22px;
+	font-size: 15px;
+	margin-bottom: 20px;
+}
+.between button{
+	width: 100%;
+	height: 40px;
+	font-size: 18px;
+	color: #fff;
+	border: 0;
+	background: #4384c5;
+	position: absolute;
+	bottom: 50px;
+}
+.newest{
+	text-indent: 0em;
+}
+.newest span{
+	background: #EAEAEA;
+	border-radius: 11px;
+	padding: 0 20px;
+	position: absolute;
+	bottom: 50px;
+	left: 50%;
+	text-align: center;
+	margin-left: -100px;
+	width: 200px;
+}
+#versionInfo{
+	padding-bottom: 100px;
 }
