--- a/css/tradeDetail.css
+++ b/css/tradeDetail.css
@@ -1,4 +1,4 @@
-.title{
+/*.title{
 	overflow: hidden;
 	padding: 0 10px;
 	border-bottom: 1px solid #e5e5e5;
@@ -56,15 +56,59 @@
 	position: absolute;
 	right: 0;
 }
-/*买入*/
 .purchase{
 	color: #08c087 !important;
 }
-/*卖出*/
 .sellout{
 	color: #e66d42 !important;
 }
-/*矿收*/
 .ore{
 	color: #4384c5 !important;
+}*/
+.detail_body{
+	padding:29px 15px;
+}
+.trade_num{
+	text-align: center;
+	padding:18px 0;
+	color:#333;
+	font-size: 20px;
+	font-weight: bold;
+}
+.trade_state{
+	padding-bottom: 42px;
+	text-align: center;
+	color:#999;
+	font-size: 15px;
+}
+.each_detail{
+	padding-bottom: 29px;
+	overflow: hidden;
+}
+.left_detail{
+	color:#999;
+	font-size: 15px;
+	float: left;
+	width:40%;
+}
+.right_detail{
+	color:#333;
+	font-size: 15px;
+	float: right;
+	width:60%;
+	text-align: right;
+	word-break:break-all; 
+}
+.img_box{
+	text-align: center;
+}
+.left_img{
+	height:80px;
+}
+.right_img{
+	height:80px;
+}
+.middle_img{
+	width:12px;
+	margin:0 30px 22px 30px;
 }
