--- a/css/tradeRecord.css
+++ b/css/tradeRecord.css
@@ -80,7 +80,7 @@
 	color: #333;
 	font-size: 16px;
 	font-weight: bold;
-	padding-bottom: 7px;
+	line-height: 40px;
 }
 .hash_num>span{
 	font-size: 13px;
@@ -118,6 +118,7 @@
 
 .loading_box{
 	text-align: center;
+	margin-top:15px;
 }
 .loading{
 	margin:0 auto;
